--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clean": "rm -rf node_modules && rm -rf package-lock.json && rm -rf cdk.out"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
+    "@aws-cdk/assert": "^2.68.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "20.14.9",
     "aws-cdk": "2.151.0",
     "jest": "^29.7.0",
