--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "clean": "rm -rf node_modules && rm -rf package-lock.json && rm -rf cdk.out"
+    "clean": "rm -rf node_modules && rm -rf package-lock.json"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^2.68.0",
     "@types/jest": "^29.5.14",
     "@types/node": "20.14.9",
+    "@types/js-yaml": "^4.0.9",
     "aws-cdk": "2.151.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.5",
@@ -22,9 +22,6 @@
     "typescript": "~5.5.3"
   },
   "dependencies": {
-    "@aws-cdk/aws-ec2": "^1.203.0",
-    "@aws-cdk/aws-iam": "^1.203.0",
-    "@types/js-yaml": "^4.0.9",
     "aws-cdk-lib": "2.151.0",
     "constructs": "^10.0.0",
     "js-yaml": "^4.1.0",
